[tool.poetry]
name = "who"
version = "0.1.0"
description = ""
authors = ["Gilad Kutiel <gilad.kutiel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Google-Images-Search = "^1.4.6"
requests = "^2.28.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.7.8"
autopep8 = "^2.0.0"
rope = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
